<resources>
    <string name="app_name">MediCare</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="re_password">Re-Password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-in?</string>
    <string name="medicare">MediCare</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="phone_name">Phone</string>
    <string name="login_to_account">Login to account 😊</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="design_by_nayush_kumar_patel">Designed By \nAyush Kumar Patel</string>
    <string name="see_all">SEE ALL</string>
</resources>