<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="#78A9BA"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="214dp"
        android:layout_height="156dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/medicare"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621"
        app:srcCompat="@drawable/logodp1" />

    <EditText
        android:id="@+id/name"
        android:layout_width="338dp"
        android:layout_height="58dp"
        android:layout_margin="20dp"
        android:alpha="0.7"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/outline_account_circle_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/full_name"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,MissingConstraints"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="338dp"
        android:layout_height="58dp"
        android:layout_margin="20dp"
        android:alpha="0.7"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/baseline_add_call_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,MissingConstraints"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="338dp"
        android:layout_height="58dp"
        android:layout_margin="20dp"
        android:alpha="0.7"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/outline_contact_mail_24"
        android:layout_gravity="center"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="338dp"
        android:layout_height="58dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.7"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/outline_lock_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/repass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/outline_remove_eye_24"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/repass"
        android:layout_width="338dp"
        android:layout_height="58dp"
        android:layout_margin="20dp"
        android:alpha="0.7"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/outline_lock_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="533dp"
        tools:ignore="Autofill,MissingConstraints"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/outline_remove_eye_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>