<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="#78A9BA">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="189dp"
        android:layout_height="193dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logodp_white" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="338dp"
        android:layout_height="57dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_btna"
        android:drawableStart="@drawable/outline_account_circle_24"
        android:drawablePadding="15dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/phone_name"
        android:inputType="phone"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345"
        tools:ignore="Autofill,MissingConstraints" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="338dp"
        android:layout_height="57dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_btna"
        android:drawableStart="@drawable/outline_lock_24"
        android:drawablePadding="15dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.043"
        tools:ignore="Autofill,MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="209dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:alpha="0.9"
        android:background="@drawable/bluebutton"
        android:text="@string/login_to_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.057" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_width="209dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:alpha="0.7"
        android:background="@drawable/bluebutton"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="Skipp>>"
        android:textColor="#0E5C75"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        android:id="@+id/skipp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="171dp"
        android:layout_height="58dp"
        android:fontFamily="@font/arima"
        android:gravity="center"
        android:text="@string/design_by_nayush_kumar_patel"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/audiowide"
        android:text="Or"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="Continue with"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_margin="16dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_btna"
        android:drawableLeft="@mipmap/google"
        android:elevation="15dp"
        android:paddingLeft="-25dp"
        android:drawablePadding="-50dp"
        android:text="Google"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_margin="16dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_btna"
        android:drawableLeft="@drawable/facebook"
        android:elevation="15dp"
        android:padding="5dp"
        android:text="Facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/audiowide"
        android:text="Login To Your Account"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.254" />


</androidx.constraintlayout.widget.ConstraintLayout>